# mcp-services

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml
.github/workflows/: build.yml  ci.yml  hello.yml
plan/: add-basecamp-clockify.md  combine-into-single-pod.md
services/hello/: Dockerfile  README.md  app.py  pyproject.toml
services/hello/src/: auth.py  tools.py
services/hello/src/routes/: mcp.py  wellknown.py
src/app/: mcp_server.py
src/integrations/: basecamp.py  clockify.py  hello.py
src/public/css/: landing.css
src/routes/: health.py  landing.py  mcp.py  wellknown.py
src/templates/: landing.twig
tests/: test_basecamp.py  test_clockify.py  test_mcp_server.py
